updated helm cart with Image Version '0.23.0.d9be82dbe277f2f5f494f4db37f4c10c54fe0be6' for mflogstream

--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -19,4 +19,4 @@ mfshell:
 mffrontend:
   imageversion: 0.23.0-alpha.bc35c9972abeff7e8c6f6de017de4a446b459ed9
 mflogstream:
-  imageversion: 0.23.0-alpha.4c6c2c43f7d636b834809417812a545d56c6fbe5
+  imageversion: 0.23.0.d9be82dbe277f2f5f494f4db37f4c10c54fe0be6
