--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -13,7 +13,7 @@ mftransactions:
 mfvaluation:
   imageversion: 0.23.0-alpha.90791dabd73ab317e253a712e422e9f666a076aa
 mfmarketdata:
-  imageversion: 0.23.0-alpha.d3b99677f45abf6e18efa736c8634b4459e46cca
+  imageversion: 0.23.0.d2c2a41a0139c2cf63e42799e7bb335e2952dd07
 mfshell:
   imageversion: 0.23.0-alpha.a9f4418a6174c74279210d4e6ed30c14f46454a2
 mffrontend:
