--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -15,7 +15,7 @@ mfvaluation:
 mfmarketdata:
   imageversion: 0.23.0.d2c2a41a0139c2cf63e42799e7bb335e2952dd07
 mfshell:
-  imageversion: 0.23.0-alpha.a9f4418a6174c74279210d4e6ed30c14f46454a2
+  imageversion: 0.23.0.edc4aacd3435bd6dd8bb1132e4ded50481c32dcd
 mffrontend:
   imageversion: 0.23.0-alpha.bc35c9972abeff7e8c6f6de017de4a446b459ed9
 mflogstream:
