--- a/helm-chart/templates/minecraft_service.yaml
+++ b/helm-chart/templates/minecraft_service.yaml
@@ -1,4 +1,4 @@
-{{ if eq .Values.deployment "full_include_minecraft" }}
+{{ if eq .Values.deployMinecraft "true" }}
 apiVersion: v1
 kind: Service
 metadata:
