--- a/helm-chart/templates/minecraft_pv.yaml
+++ b/helm-chart/templates/minecraft_pv.yaml
@@ -1,4 +1,4 @@
-{{ if eq .Values.deployMinecraft "true" }}
+{{ if eq .Values.additionaldeployment "minecraft" }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
